cros: Fix immersive fullscreen tabstrip revealing does not draw well

Changes:
When OnImmersiveRevealStarted(), if top container's layer is not marked as not filling bounds opaquely, the tabstrip may not draw correctly. It happens when user has theme installed or hovers mouse onto tabstrip.

Regression comes from: https://codereview.chromium.org/2674813002.

BUG=697099
TEST=device test bug does not happen

Review-Url: https://codereview.chromium.org/2728063002
Cr-Commit-Position: refs/heads/master@{#454896}

Former-commit-id: bc2aafec33859883cdd69a43b301a40a79ce9327